# YukiCRsCppTemplete

./: CMakeLists.txt  README.md  note.md
include/: MyLib.h
src/: MyLib.cpp  log.cpp  main.cpp
